<resources>
    <string name="app_name">Note App</string>


    <string name="search_here">Search Here</string>
    <string name="clear">Clear</string>
    <string name="no_data">No Data Found</string>
    <string name="add_note">Add Note</string>
    <string name="choose_color">Choose Color</string>
    <string name="some_text">Lorem Ipsum jdrugterjgrjkgbemv
    ajfhgwjhfvwfvwnfbqw kjwufugwhf</string>

    <string name="edited_on">Edited On:%1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="this_is_a_note_title">This is a note title</string>
    <string name="dd_mm_yyyy">dd-mm-yyyy</string>
    <string name="back">back</string>
    <string name="note">Note</string>
    <string name="note_title">Note Title</string>


</resources>