<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="5dp">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:id="@+id/noteItemLayout"
        android:clickable="true"
        android:focusable="true"
        android:background="?attr/selectableItemBackground"
        app:cardCornerRadius="15dp"
        app:cardElevation="6dp"
        android:padding="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="6dp">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/noteItemtitle"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="4dp"
                android:padding="5dp"
                android:ellipsize="end"
                android:fontFamily="sans-serif-medium"
                android:text="@string/this_is_a_note_title"
                android:textSize="18sp"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textStyle="bold">

            </com.google.android.material.textview.MaterialTextView>

<TextView
    android:layout_width="match_parent"
    android:id="@+id/notecontent"
    android:layout_below="@id/noteItemtitle"
    android:layout_marginStart="4dp"
    android:layout_marginTop="5dp"
    android:layout_marginEnd="4dp"
    android:layout_marginBottom="3dp"
    android:fontFamily="sans-serif"
    android:maxLines="12"
    android:textSize="14sp"
    android:text="@string/some_text"
    android:padding="5dp"
    android:ellipsize="end"
    android:layout_height="wrap_content">


</TextView>


            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/noteDate"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="4dp"
                android:padding="5dp"
                android:layout_below="@id/notecontent"
                android:drawablePadding="7dp"
                android:layout_alignParentEnd="true"
                android:drawableStart="@android:drawable/ic_menu_my_calendar"
                android:ellipsize="end"
                android:drawableTint="@color/black"
                android:fontFamily="sans-serif-black"
                android:text="@string/dd_mm_yyyy"
                android:textSize="12sp"

                android:textColor="@color/black">

            </com.google.android.material.textview.MaterialTextView>




        </RelativeLayout>






    </com.google.android.material.card.MaterialCardView>

</RelativeLayout>