<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/notecontentfragmentparent"
    tools:context=".fragment.SaveOrUpdateFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:id="@+id/toolbarfragmentcontent"
        android:layout_height="50dp">

        <ImageView
            android:id="@+id/arrowback"
            android:layout_width="53dp"
            android:layout_height="37dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="15dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true"
            android:paddingStart="5dp"
            android:contentDescription="@string/back"
            android:paddingTop="5dp"
            android:paddingEnd="5dp"
            android:paddingBottom="5dp"

            android:src="@drawable/arrow">

        </ImageView>

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lastEdited"
            android:background="@drawable/date_rounded"
            android:layout_centerInParent="true"

            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:paddingStart="13dp"
            android:paddingEnd="13dp"
            android:ellipsize="end"
            android:fontFamily="sans-serif-medium"
            android:text="Edited On"
            android:textSize="18sp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textStyle="bold">

        </com.google.android.material.textview.MaterialTextView>


        <ImageView
            android:id="@+id/saveNote"
            android:layout_width="35dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            app:tint="@color/black"
            android:focusable="true"
            android:paddingBottom="5dp"


            android:src="@drawable/saveinstagram">

        </ImageView>

    </RelativeLayout>


<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_above="@id/bottomBar"
    android:layout_below="@id/toolbarfragmentcontent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/nestedScrollView"
        android:fillViewport="true">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:id="@+id/etTitle"
                android:inputType="none"
                android:textSize="22sp"
                android:importantForAutofill="no"
                android:fontFamily="sans-serif-medium"
                android:hint="@string/note_title"
                android:background="@null">

            </EditText>


            <com.yahiaangelo.markdownedittext.MarkdownEditText
                android:id="@+id/etNoteContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="22dp"
                android:background="@null"
                android:fontFamily="sans-serif-condensed-medium"
                android:hint="@string/note"
                android:importantForAutofill="no"
                android:inputType="none"
                android:padding="10dp"
                android:textSize="16sp" />








        </LinearLayout>




    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:id="@+id/fabColorPick"
        android:layout_margin="15dp"
        android:layout_gravity="end|bottom"
        android:src="@drawable/colorspalete"
        app:backgroundTint="#B547C8"
        android:layout_height="wrap_content">


    </com.google.android.material.floatingactionbutton.FloatingActionButton>



</FrameLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:id="@+id/bottomBar"
    android:gravity="center_horizontal"
    android:layout_marginBottom="6dp"
    android:orientation="horizontal"
    android:visibility="gone"
    android:layout_alignParentBottom="true">

    <com.yahiaangelo.markdownedittext.MarkdownStylesBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/StylesBar"
        android:layout_margin="10dp"
        android:elevation="5dp"
        android:padding="0dp">

    </com.yahiaangelo.markdownedittext.MarkdownStylesBar>







</LinearLayout>


</RelativeLayout>